replace usage of Stream.collect(Collectors.toList()) with Stream.toList()